projects/vb6parse/snapshots/tests/project/environment/environment_mexe_project_load.snap
---
source: projects/vb6parse/tests/project/environment.rs
expression: project
---
project_type: Exe
references:
  - uuid: 00020430-0000-0000-c000-000000000046
    unknown1: "2.0"
    unknown2: "0"
    path: "..\\..\\..\\..\\Windows\\SysWOW64\\stdole2.tlb"
    description: OLE Automation
objects: []
modules:
  - name: Module1
    path: mexe.bas
  - name: Module2
    path: ActiveX.bas
classes:
  - name: RunM2000
    path: Class1.cls
  - name: cIEFeatures
    path: cIEFeatures.cls
related_documents: []
property_pages: []
designers: []
forms:
  - frmAbout.frm
  - mForm1.frm
user_controls: []
user_documents: []
other_properties:
  VBCompiler:
    LinkSwitches: "/STACK:32180000"
properties:
  unused_control_info: Remove
  upgrade_controls: Upgrade
  res_file_32_path: m2000exe.RES
  icon_form: frmAbout
  startup: Sub Main
  help_file_path: ""
  title: mexe
  exe_32_file_name: m2000.exe
  exe_32_compatible: mexe.exe
  dll_base_address: 0
  path_32: ""
  command_line_arguments: ""
  name: m2000exe
  description: ""
  debug_startup_component: ""
  help_context_id: "0"
  compatibility_mode: NoCompatibility
  version_32_compatibility: ""
  version_info:
    major: 2
    minor: 8
    revision: 0
    auto_increment_revision: 0
    company_name: space
    file_description: ""
    copyright: ""
    trademark: ""
    product_name: ""
    comments: M2000.dll loader
  server_support_files: Local
  conditional_compile: ""
  compilation_type:
    NativeCode:
      optimization_type: FavorFastCode
      favor_pentium_pro: "False"
      code_view_debug_info: NotCreated
      aliasing: AssumeAliasing
      bounds_check: CheckBounds
      overflow_check: CheckOverflow
      floating_point_check: CheckFloatingPointError
      pentium_fdiv_bug_check: CheckPentiumFDivBug
      unrounded_floating_point: DoNotAllow
  start_mode: StandAlone
  unattended: Interactive
  retained: UnloadOnExit
  thread_per_object: 0
  threading_model: ApartmentThreaded
  max_number_of_threads: 1
  debug_startup_option: WaitForComponentCreation
  use_existing_browser: Use
